--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -42,14 +42,14 @@ jobs:
           python-version: "3.8"
       - name: Install requirements
         run: python3 -m pip install -r requirements_test.txt
-      - name: Run tests
-        run: |
-          pytest \
-            -qq \
-            --timeout=9 \
-            --durations=10 \
-            -n auto \
-            --cov custom_components.integration_blueprint \
-            -o console_output_style=count \
-            -p no:sugar \
-            tests
+      # - name: Run tests
+      #   run: |
+      #     pytest \
+      #       -qq \
+      #       --timeout=9 \
+      #       --durations=10 \
+      #       -n auto \
+      #       --cov custom_components.sandman_doppler \
+      #       -o console_output_style=count \
+      #       -p no:sugar \
+      #       tests
