--- a/custom_components/sandman_doppler/services.yaml
+++ b/custom_components/sandman_doppler/services.yaml
@@ -82,12 +82,15 @@ add_alarm:
           min: 0
           max: 100
           mode: slider
-    enabled:
+    status:
       name: Alarm Enabled?
       description: Whether alarm is enabled or disabled
       required: true
       selector:
-        boolean:
+        select:
+          options:
+          - 'set'
+          - 'unarmed'
     sound:
       name: Alarm Sound
       description: MP3 file to play for alarm
@@ -134,6 +137,35 @@ delete_alarm:
           min: 1
           max: 255
           mode: box
+
+update_alarm:
+  name: Update Alarm Status
+  description: Set, Unsets and Snoozes Alarm
+  target:
+    device:
+      integration: sandman_doppler
+    entity:
+      integration: sandman_doppler
+  fields:
+    id:
+      name: Alarm ID
+      description: ID of the alarm to be updated
+      required: true
+      selector:
+        number:
+          min: 1
+          max: 255
+          mode: box
+    status:
+      name: Alarm Status
+      description: Set, Unset or Snooze
+      required: true
+      selector:
+        select:
+          options:
+            - 'set'
+            - 'snoozed'
+            - 'unarmed'
 
 set_main_display_text:
   name: Set main display text
